[metadata]
name = blah
version = attr: blah.__version__
author = Ellen Marie Dash
author_email = me@duckie.co
description = "????"
long_description = file: README.*
#long_description_content_type=text/markdown
url = https://github.com/duckinator/refactored-pancake
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.5

install_requires =
    kivy~=1.11

tests_require =
    blah[linting,testing]

[options.extras_require]
testing =
    flake8~=3.5
    flake8-bugbear
    flake8-commas
    flake8-docstrings
    pydocstyle~=4.0
    pylint
    pytest
    pytest-flake8
    pytest-pylint

release =
    bork

docs =
    pdoc3
    bork

[options.entry_points]
console_scripts =
    blah = blah.interface:main

[flake8]
select = C,E,F,I,N,W,B,B9
max-line-length = 85
exclude =
    .eggs,
    .git,
    .tox,
    __pycache__,
    build,
    dist,
    venv

import-order-style = google

